# antokel-cloud

./: LICENSE  README.md  example.md  pyproject.toml  requirements.txt
src/antokel_cloud/: __init__.py
src/antokel_cloud/aws/: __init__.py
src/antokel_cloud/aws/ec2/: __init__.py  instance.py  volume.py
src/antokel_cloud/aws/ec2/user_data/: __init__.py  base.py  container_fleet.py
src/antokel_cloud/aws/s3/: __init__.py  text.py
tests/: __init__.py  conftest.py  test_antokel_aws.py
tests/ec2/: __init__.py  test_ec2.py  test_instance.py  test_volume.py
tests/s3/: __init__.py  test_s3.py  test_s3_text.py
