[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antokel-cloud"
version = "0.0.5"
description = "Cloud SDK for Antokel engineers"
readme = "README.md"
authors = [
    { name = "Antonio Peña Peña", email = "toni@antokel.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "boto3"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/zPy52/antokel-cloud"
Repository = "https://github.com/zPy52/antokel-cloud"
Issues = "https://github.com/zPy52/antokel-cloud/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/antokel_cloud"] 